# scinit

./: CLAUDE.md  Cargo.toml  Containerfile  KNOWN-ISSUES.md  README.md  test_ctrl_c.sh  test_pgrp_foreground.sh  test_scenario_b.sh  test_signal_debug.sh  test_terminal_ctrl_c.sh
docs/rfcs/: 2025-07-27-integration-testing-framework.md  2025-07-27-security-hardening.md
src/: cli.rs  environment.rs  file_watcher.rs  main.rs  port_manager.rs  process_manager.rs  signals.rs
tests/: integration_test.rs
tests/integration/: mod.rs
tests/integration/infrastructure/: lifecycle_framework.rs  mod.rs  performance_framework.rs  process_harness.rs  signal_assertions.rs  signal_framework.rs  socket_framework.rs
tests/integration/scenarios/: live_reload_tests.rs  mod.rs  process_lifecycle_tests.rs  signal_handling_tests.rs  socket_inheritance_tests.rs
