[package]
name = "scinit"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
futures = "0.3.28"
nix = { version = "0.27.1", features = ["process", "term", "signal"] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["signal"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
